# flowmint-api

./: .gitignore  README.MD  alembic.ini  pyproject.toml
config/: settings.py  urls.py  views.py
docs/: repositories.md
migrations/: env.py
migrations/versions/: 61e79d4706ce_initial_supabase_connection.py  6b978aa7e92c_create_core_mvp_tables.py
src/: main.py
src/application/: __init__.py
src/application/ports/: __init__.py  auth_context.py
src/domain/: exceptions.py
src/infrastructure/: config.py
src/infrastructure/api/v1/: router.py
src/infrastructure/api/v1/endpoints/: allocations.py  categories.py  periods.py  snapshot.py  transactions.py  transfers.py
src/infrastructure/api/v1/schemas/: allocations.py  categories.py  periods.py  response.py  snapshot.py  transactions.py  transfers.py
src/infrastructure/auth/: __init__.py  dependencies.py  stub_adapter.py
src/infrastructure/persistence/: db.py
src/infrastructure/persistence/models/: __init__.py  allocation.py  budget_period.py  category.py  idempotency_key.py  transaction.py  transfer.py  user_setting.py
src/presentation/: __init__.py
src/presentation/schemas/: __init__.py  me.py
tests/: conftest.py
tests/integration/: test_me_endpoint.py
tests/unit/: test_stub_auth_adapter.py
